RESOLVED FIXED 128919
WebKitGTK+ should stop calling functions to set the view source mode
https://bugs.webkit.org/show_bug.cgi?id=128919
Summary WebKitGTK+ should stop calling functions to set the view source mode
Anders Carlsson
Reported 2014-02-17 11:10:27 PST
WebKitGTK+ should stop calling functions to set the view source mode
Attachments
Patch (4.48 KB, patch)
2014-02-17 11:12 PST, Anders Carlsson
cgarcia: review+
Anders Carlsson
Comment 1 2014-02-17 11:12:28 PST
WebKit Commit Bot
Comment 2 2014-02-17 11:14:32 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2014-02-17 11:18:41 PST
Comment on attachment 224399 [details] Patch We should also mark the methods as deprecated in both APIs and the WebKitViewMode too in the WebKit2 API. But that shouldn't block this, I can do it in a follow up patch
Carlos Garcia Campos
Comment 4 2014-02-17 11:20:48 PST
Comment on attachment 224399 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224399&action=review > Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:3036 > if (webView->priv->viewMode == viewMode) > return; You should remove this as well
Anders Carlsson
Comment 5 2014-02-17 11:21:46 PST
Note You need to log in before you can comment on or make changes to this bug.