WebKitGTK+ should stop calling functions to set the view source mode https://bugs.webkit.org/show_bug.cgi?id=128919

Reviewed by Carlos Garcia Campos.

This is a first step towards getting rid of the view source mode from WebCore.
View source shouldn't be a mode on the web page and can be implemented in other ways by
embedding apps. Furthermore, the inspector has an excellent view source mode.

Source/WebKit/gtk:

* webkit/webkitwebview.cpp:
(webkit_web_view_set_view_source_mode):
(webkit_web_view_get_view_source_mode):
Turn these into no-ops.

Source/WebKit2:

* UIProcess/API/gtk/WebKitWebView.cpp:
(webkit_web_view_set_view_mode):
(webkit_web_view_get_view_mode):
Turn these into no-ops.

Canonical link: https://commits.webkit.org/146959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164235 268f45cc-cd09-0410-ab3c-d52691b4dbfc