Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp
@@ -163,7 +163,6 @@ struct _WebKitWebViewPrivate {
     double estimatedLoadProgress;
     CString activeURI;
     bool isLoading;
-    WebKitViewMode viewMode;
 
     bool waitingForMainResource;
     unsigned long mainResourceResponseHandlerID;
@@ -3033,13 +3032,7 @@ void webkit_web_view_set_view_mode(WebKitWebView* webView, WebKitViewMode viewMo
 {
     g_return_if_fail(WEBKIT_IS_WEB_VIEW(webView));
 
-    if (webView->priv->viewMode == viewMode)
-        return;
-
-    getPage(webView)->setMainFrameInViewSourceMode(viewMode == WEBKIT_VIEW_MODE_SOURCE);
-
-    webView->priv->viewMode = viewMode;
-    g_object_notify(G_OBJECT(webView), "view-mode");
+    g_warning("webkit_web_view_set_view_mode has been deprecated and is a no-op.");
 }
 
 /**
@@ -3054,7 +3047,8 @@ WebKitViewMode webkit_web_view_get_view_mode(WebKitWebView* webView)
 {
     g_return_val_if_fail(WEBKIT_IS_WEB_VIEW(webView), WEBKIT_VIEW_MODE_WEB);
 
-    return webView->priv->viewMode;
+    g_warning("webkit_web_view_get_view_mode has been deprecated and always returns WEBKIT_VIEW_MODE_WEB.");
+    return WEBKIT_VIEW_MODE_WEB;
 }
 
 /**
